# qemu

accel/tcg/: translate-all.c  translator.c
include/: elf.h
include/exec/: translator.h
include/tcg/: tcg.h
linux-user/: elfload.c  main.c  meson.build  native-lib-idl.c  native-lib-idl.h  native-lib-idl.l  native-lib-idl.y  native-lib.c  native-lib.h
tcg/: tcg.c
tcg/aarch64/: tcg-target.c.inc
tcg/i386/: tcg-target.c.inc
